--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "release": "dotenv release-it"
   },
   "dependencies": {
     "nuxt": "^3.13.2",
@@ -15,6 +17,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "release-it": "^17.10.0",
     "release-it-pnpm": "^4.6.3"
   }
